--- a/index.html
+++ b/index.html
@@ -26,24 +26,36 @@
   </ol>
     <div class="carousel-item active">
       <img src="Media/1.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
+      <div class="container">
+        <div class="carousel-caption">
+          <h1 class="txt-center">Data & Statistics management</h1>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          <p>
+            <a class="btn btn-lg btn-primary" href="DataStatisticsManagement.html" role="button">Discover</a>
+          </p>
+        </div>
       </div>
     </div>
     <div class="carousel-item">
       <img src="Media/2.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
+          <h1 class="text-center">Web Debelopment & Design</h1>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          <p>
+            <a class="btn btn-lg btn-primary" href="WebDevelopmentDesign.html" role="button">Discover</a>
+          </p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="Media/3.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
+          <h1 class="text-center">Software Development</h1>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          <p>
+            <a class="btn btn-lg btn-primary" href="SoftwareDevelopment.html" role="button">Discover</a>
+          </p>
       </div>
+
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
