--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
     <div class="carousel-item active">
-      <img src="Media/1.jpg" class="d-block w-100" alt="...">
+      <img src="Media/1.0.jpg" class="d-block w-100" alt="...">
       <div class="container">
         <div class="carousel-caption">
           <h1 class="txt-center">Data & Statistics management</h1>
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="Media/2.jpg" class="d-block w-100" alt="...">
+      <img src="Media/2.0.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
           <h1 class="text-center">Web Debelopment & Design</h1>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
@@ -65,7 +65,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="Media/3.jpg" class="d-block w-100" alt="...">
+      <img src="Media/3.0.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
           <h1 class="text-center">Software Development</h1>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
@@ -112,7 +112,7 @@
         <h2 class="text-center">Software & Game Development</h2>
         <p class="text-center">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         <p>
-          <a class="btn btn-secondary" href="#" role="button">View details »</a>
+          <a class="btn btn-secondary ml-3" href="#" role="button">View details »</a>
         </p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
