--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         user-select: none;
       }
 
+      .btn-mid {
+       align-items: center; 
+      }
+
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
@@ -96,7 +100,9 @@
         <h2 class="text-center">Web Debelopment & Design</h2>
         <p class="text-center">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
         <p>
-          <a class="btn btn-secondary" href="#" role="button">View details »</a>
+          <div >
+            <a class="btn btn-secondary" href="#" role="button">View details »</a>
+          </div>
         </p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
@@ -112,7 +118,13 @@
         <h2 class="text-center">Software & Game Development</h2>
         <p class="text-center">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         <p>
-          <a class="btn btn-secondary ml-3" href="#" role="button">View details »</a>
+        <div class="container marketing">
+          <div class="row align-items-start">
+            <div class="col text-center">
+              <a class="btn btn-secondary" href="#" role="button">View details »</a>
+            </div>
+          </div>
+        </div>
         </p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
