--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         user-select: none;
       }
 
+      .car-mid-title {
+        font-size: 60px
+      }
+
       .btn-mid {
        align-items: center; 
       }
@@ -39,6 +43,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Managency</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Log in </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Sing up</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
   <div class="carousel-inner">
   <ol class="carousel-indicators">
@@ -50,10 +71,11 @@
       <img src="Media/1.0.jpg" class="d-block w-100" alt="...">
       <div class="container">
         <div class="carousel-caption">
-          <h1 class="txt-center">Data & Statistics management</h1>
+          <h1 class="txt-center car-mid-title">Data & Statistics management</h1>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
           <p>
             <a class="btn btn-lg btn-primary" href="DataStatisticsManagement.html" role="button">Discover</a>
+            <div class="pb-3" style="height: 275px"></div>
           </p>
         </div>
       </div>
@@ -61,20 +83,22 @@
     <div class="carousel-item">
       <img src="Media/2.0.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-          <h1 class="text-center">Web Debelopment & Design</h1>
+          <h1 class="text-center car-mid-title">Web Development & Design</h1>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
           <p>
             <a class="btn btn-lg btn-primary" href="WebDevelopmentDesign.html" role="button">Discover</a>
+            <div class="pb-3" style="height: 275px"></div>
           </p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="Media/3.0.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-          <h1 class="text-center">Software Development</h1>
+          <h1 class="text-center car-mid-title">Software Development</h1>
           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
           <p>
             <a class="btn btn-lg btn-primary" href="SoftwareDevelopment.html" role="button">Discover</a>
+            <div class="pb-3" style="height: 275px"></div>
           </p>
       </div>
 
@@ -97,43 +121,43 @@
     <div class="row">
       <div class="col-lg-4">
         <img src="Media/1.1.jpg" class="d-block w-100" alt="...">
-        <h2 class="text-center">Web Debelopment & Design</h2>
+        <h2 class="text-center">Web Development & Design</h2>
         <p class="text-center">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-        <p>
-          <div >
-            <a class="btn btn-secondary" href="#" role="button">View details »</a>
-          </div>
-        </p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="Media/2.1.jpg" class="d-block w-100" alt="...">
         <h2 class="text-center">Data & Statistics Management</h2>
         <p class="text-center">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        <p>
-          <a class="btn btn-secondary" href="#" role="button">View details »</a>
-        </p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="Media/3.1.jpg" class="d-block w-100" alt="...">
         <h2 class="text-center">Software & Game Development</h2>
         <p class="text-center">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p>
-        <div class="container marketing">
-          <div class="row align-items-start">
-            <div class="col text-center">
-              <a class="btn btn-secondary" href="#" role="button">View details »</a>
-            </div>
-          </div>
-        </div>
-        </p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
+    <div class="row">
+      <div class="col-lg-4 text-center">
+          <a class="btn btn-outline-primary" href="WebDevelopmentDesign.html" role="button">View details »</a>
+      </div>
+      <div class="col-lg-4 text-center">
+          <a class="btn btn-outline-primary" href="DataStatisticsManagement.html" role="button">View details »</a>
+      </div>
+      <div class="col-lg-4 text-center">
+          <a class="btn btn-outline-primary" href="SoftwareDevelopment.html" role="button">View details »</a>
+      </div>
+    </div>
 </div>
+
+<footer class="pt-5 mt-md-5 pt-md-5 border-top bg-secondary text-center" style="height:75px">
+    <p class="ml-3 bg-secondary">
+      Instangram: 
+      <a href="https://www.instagram.com/vladbadea_/?hl=it">vladbadea_</a>
+    </p>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
 <script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
-
 
   </body>
 </html>
