--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       }
 
       .btn-mid {
-       align-items: center; 
+       align-items: middle; 
       }
 
       @media (min-width: 768px) {
@@ -148,10 +148,10 @@
     </div>
 </div>
 
-<footer class="pt-5 mt-md-5 pt-md-5 border-top bg-secondary text-center" style="height:75px">
+<footer class="pt-5 mt-md-5 pt-md-5 border-top bg-secondary text-center" style="height:300px">
     <p class="ml-3 bg-secondary">
       Instangram: 
-      <a href="https://www.instagram.com/vladbadea_/?hl=it">vladbadea_</a>
+      <a class="text-dark" href="https://www.instagram.com/vladbadea_/?hl=it">vladbadea_</a>
     </p>
 </footer>
 
