--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <style>
       .bd-placeholder-img {
-        font-size: 1.125rem;
+        font-size: 1rem;
         text-anchor: middle;
         -webkit-user-select: none;
         -moz-user-select: none;
@@ -51,10 +51,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Log in </a>
+              <a class="nav-link active" href="LogIn.html">Log in </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sing up</a>
+              <a class="nav-link active" href="SingIn.html">Sing up</a>
             </li>
           </ul>
         </div>
@@ -68,11 +68,10 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
     <div class="carousel-item active">
-      <img src="Media/1.0.jpg" class="d-block w-100" alt="...">
+      <img src="Media/1.0.jpg" class="w-100" alt="...">
       <div class="container">
         <div class="carousel-caption">
           <h1 class="txt-center car-mid-title">Data & Statistics management</h1>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
           <p>
             <a class="btn btn-lg btn-primary" href="DataStatisticsManagement.html" role="button">Discover</a>
             <div class="pb-3" style="height: 275px"></div>
@@ -84,7 +83,6 @@
       <img src="Media/2.0.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
           <h1 class="text-center car-mid-title">Web Development & Design</h1>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
           <p>
             <a class="btn btn-lg btn-primary" href="WebDevelopmentDesign.html" role="button">Discover</a>
             <div class="pb-3" style="height: 275px"></div>
@@ -95,7 +93,6 @@
       <img src="Media/3.0.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
           <h1 class="text-center car-mid-title">Software Development</h1>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
           <p>
             <a class="btn btn-lg btn-primary" href="SoftwareDevelopment.html" role="button">Discover</a>
             <div class="pb-3" style="height: 275px"></div>
@@ -119,22 +116,32 @@
 <div class="container marketing">
     <!-- Three columns of text below the carousel -->
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4 text-center">
         <img src="Media/1.1.jpg" class="d-block w-100" alt="...">
         <h2 class="text-center">Web Development & Design</h2>
-        <p class="text-center">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+        <p class="text-center">Here you can find help to create your website, or entrust the management of the latter so that you can give yourself some relaxation!</p>
+        <p>
+          <a class="btn btn-outline-primary" href="WebDevelopmentDesign.html" role="button">View details »</a>
+        </p>
       </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
+      <div class="col-lg-4 text-center">
         <img src="Media/2.1.jpg" class="d-block w-100" alt="...">
         <h2 class="text-center">Data & Statistics Management</h2>
-        <p class="text-center">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        <p class="text-center">Here you can monitor the income, expenses and financial performance of your company, site, etc.</p>
+        <p>
+          <a class="btn btn-outline-primary" href="DataStatisticsManagement.html" role="button">View details »</a>
+        </p>
       </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
+      <div class="col-lg-4 text-center">
         <img src="Media/3.1.jpg" class="d-block w-100" alt="...">
         <h2 class="text-center">Software & Game Development</h2>
-        <p class="text-center">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p class="text-center">Here you can try and buy some of my creations ranging from simple applications to some of the most popular games.</p>
+        <p>
+          <a class="btn btn-outline-primary" href="SoftwareDevelopment.html" role="button">View details »</a>
+        </p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
+    <!--
     <div class="row">
       <div class="col-lg-4 text-center">
           <a class="btn btn-outline-primary" href="WebDevelopmentDesign.html" role="button">View details »</a>
@@ -146,11 +153,12 @@
           <a class="btn btn-outline-primary" href="SoftwareDevelopment.html" role="button">View details »</a>
       </div>
     </div>
+    -->
 </div>
 
-<footer class="pt-5 mt-md-5 pt-md-5 border-top bg-secondary text-center" style="height:300px">
-    <p class="ml-3 bg-secondary">
-      Instangram: 
+<footer class="pt-5 mt-md-5 pt-md-5 border-top bg-secondary" style="height:300px">
+    <p class=" bg-secondary">
+      <img src="Media/instagram.png" class="" alt="..."> 
       <a class="text-dark" href="https://www.instagram.com/vladbadea_/?hl=it">vladbadea_</a>
     </p>
 </footer>
