--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a class="nav-link active" href="LogIn.html">Log in </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="SingIn.html">Sing up</a>
+              <a class="nav-link active" href="SignUp.html">Sing up</a>
             </li>
           </ul>
         </div>
