--- a/LogIn.html
+++ b/LogIn.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
         <script scr="js/bootstrap.min.js" crossorigin="anonymous"></script>
 
-        <title>Signin Template · Bootstrap</title>
+        <title>Log In</title>
             
         <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/sign-in/">
             
@@ -45,7 +45,6 @@
     </head>
     <body class=" text-center">
         <form class="box">
-            <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
             <h1 class="h3 mb-3 font-weight-normal">Please log in</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="email" id="inputEmail" class="form-control mb-3" placeholder="Email address" required="" autofocus="">
@@ -56,7 +55,7 @@
                     <input type="checkbox" value="remember-me"> Remember me
                 </label>
             </div>
-            <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
+            <button class="btn btn-lg btn-primary" type="submit">Log in</button>
             <p class="mt-5 mb-3 text-muted">© 2017-2019</p>
         </form>
     </body>
