--- a/LogIn.html
+++ b/LogIn.html
@@ -43,7 +43,7 @@
         <!-- Custom styles for this template -->
         <link href="signin.css" rel="stylesheet">  
     </head>
-    <body class=" text-center">
+    <body class=" text-center" name="contact" method="POST" data-netlify="true">
         <form class="box">
             <h1 class="h3 mb-3 font-weight-normal">Please log in</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
