--- a/LogIn.html
+++ b/LogIn.html
@@ -43,8 +43,8 @@
         <!-- Custom styles for this template -->
         <link href="signin.css" rel="stylesheet">  
     </head>
-    <body class=" text-center" name="contact" method="POST" data-netlify="true">
-        <form class="box">
+    <body class=" text-center">
+        <form class="box" name="contact" method="POST" data-netlify="true">
             <h1 class="h3 mb-3 font-weight-normal">Please log in</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="email" id="inputEmail" class="form-control mb-3" placeholder="Email address" required="" autofocus="">
