--- a/LogIn.html
+++ b/LogIn.html
@@ -44,18 +44,18 @@
         <link href="signin.css" rel="stylesheet">  
     </head>
     <body class=" text-center">
-        <form class="box" name="contact" method="POST" data-netlify="true">
+        <form class="box" name="contact" method="POST" data-netlify="true" action="LogIn.php">
             <h1 class="h3 mb-3 font-weight-normal">Please log in</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" class="form-control mb-3" placeholder="Email address" required="" autofocus="">
+            <input type="text" id="inputEmail" class="form-control mb-3" placeholder="Email address" name="txt1">
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control mb-3" placeholder="Password" required="">
+            <input type="text" id="inputPassword" class="form-control mb-3" placeholder="Password" name="txt2">
             <div class="checkbox mb-3">
                 <label>
                     <input type="checkbox" value="remember-me"> Remember me
                 </label>
             </div>
-            <button class="btn btn-lg btn-primary" type="submit">Log in</button>
+            <button class="btn btn-lg btn-primary" type="submit" value="login">Log in</button>
             <p class="mt-5 mb-3 text-muted">© 2017-2019</p>
         </form>
     </body>
