--- a/LogIn.html
+++ b/LogIn.html
@@ -44,7 +44,7 @@
         <link href="signin.css" rel="stylesheet">  
     </head>
     <body class=" text-center">
-        <form class="box" name="contact" method="POST" data-netlify="true" action="LogIn.php">
+        <form class="box" name="contact" method="POST" action="LogIn.php">
             <h1 class="h3 mb-3 font-weight-normal">Please log in</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="text" id="inputEmail" class="form-control mb-3" placeholder="Email address" name="txt1">
