--- a/SignUp.html
+++ b/SignUp.html
@@ -45,18 +45,18 @@
     <link href="signin.css" rel="stylesheet">
 </head>
 <body class="text-center">
-    <form class="box">
+    <form class="box" name="user" method="POST" action="Identify.js">
         <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
         <label for="imputName" class="sr-only">Name</label>
-        <input type="name" id="inputName" class="form-control mb-3" placeholder="Name" required="" autofocus="">
+        <input type="text" id="inputName" class="form-control mb-3" placeholder="Name" required="" autofocus="">
         <label for="inputSurname" class="sr-only">Surname</label>
-        <input type="surname" id="inputSurname" class="form-control mb-3" placeholder="Surname" required="" autofocus="">
+        <input type="text" id="inputSurname" class="form-control mb-3" placeholder="Surname" required="" autofocus="">
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control mb-3" placeholder="Email address" required="" autofocus="">
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control mb-3" placeholder="Password" required="">
         <label for="inputConfirmPassword" class="sr-only">Confirm Password</label>
-        <input type="cpassword" id="inputConfirmPassword" class="form-control mb-3" placeholder="Confirm Password" required="">
+        <input type="password" id="inputConfirmPassword" class="form-control mb-3" placeholder="Confirm Password" required="">
         <button class="btn btn-lg btn-primary" type="submit">Sign Up</button>
         <p class="mt-5 mb-3 text-muted">© 2017-2019</p>
     </form>
